--- a/Sensor de Temperatura.build_log.htm
+++ b/Sensor de Temperatura.build_log.htm
@@ -7,3 +7,18 @@ C:\Users\Milaronix\Desktop\Microprocesadores\Sensor-Temperatura-LPC1114FN28-102\
 Project File Date:  11/03/2014
 
 <h2>Output:</h2>
+Build target 'Target 1'
+compiling main.c...
+main.c(27): warning:  #1295-D: Deprecated declaration splash_screen - give arg types
+  void splash_screen();
+main.c(28): warning:  #1295-D: Deprecated declaration set_splash_screen - give arg types
+  void set_splash_screen();
+main.c(31): warning:  #177-D: variable "i" was declared but never referenced
+        int i;
+main.c(133): warning:  #1-D: last line of file ends without a newline
+  }
+main.c: 4 warnings, 0 errors
+linking...
+Program Size: Code=1060 RO-data=224 RW-data=12 ZI-data=612  
+FromELF: creating hex file...
+".\Sensor de Temperatura.axf" - 0 Error(s), 4 Warning(s).
