--- a/Sensor de Temperatura.build_log.htm
+++ b/Sensor de Temperatura.build_log.htm
@@ -13,12 +13,20 @@ main.c(27): warning:  #1295-D: Deprecated declaration splash_screen - give arg t
   void splash_screen();
 main.c(28): warning:  #1295-D: Deprecated declaration set_splash_screen - give arg types
   void set_splash_screen();
-main.c(31): warning:  #177-D: variable "i" was declared but never referenced
-        int i;
-main.c(133): warning:  #1-D: last line of file ends without a newline
+main.c(29): warning:  #1295-D: Deprecated declaration imprime - give arg types
+  void imprime();
+main.c(30): warning:  #1295-D: Deprecated declaration limpia_pantalla - give arg types
+  void limpia_pantalla();
+main.c(146): warning:  #1-D: last line of file ends without a newline
   }
-main.c: 4 warnings, 0 errors
+main.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=1060 RO-data=224 RW-data=12 ZI-data=612  
+Program Size: Code=1112 RO-data=224 RW-data=12 ZI-data=612  
 FromELF: creating hex file...
-".\Sensor de Temperatura.axf" - 0 Error(s), 4 Warning(s).
+".\Sensor de Temperatura.axf" - 0 Error(s), 5 Warning(s).
+}
+main.c: 7 warnings, 0 errors
+linking...
+Program Size: Code=880 RO-data=224 RW-data=12 ZI-data=612  
+FromELF: creating hex file...
+".\Sensor de Temperatura.axf" - 0 Error(s), 7 Warning(s).
