--- a/Sensor de Temperatura.htm
+++ b/Sensor de Temperatura.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Sensor de Temperatura.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Sensor de Temperatura.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Mon Nov 03 17:49:44 2014
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Mon Nov 03 17:53:30 2014
 <BR><P>
 <H3>Maximum Stack Usage =         56 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -370,7 +370,15 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;imprime
 </UL>
 
-<P><STRONG><a name="[39]"></a>imprime</STRONG> (Thumb, 114 bytes, Stack size 32 bytes, main.o(.text))
+<P><STRONG><a name="[3a]"></a>limpia_pantalla</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[2c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+</UL>
+
+<P><STRONG><a name="[64]"></a>splash_screen</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text), UNUSED)
+
+<P><STRONG><a name="[65]"></a>set_splash_screen</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text), UNUSED)
+
+<P><STRONG><a name="[39]"></a>imprime</STRONG> (Thumb, 120 bytes, Stack size 32 bytes, main.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = imprime &rArr; desliza_texto &rArr; delay_ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[38]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;desliza_texto
@@ -379,23 +387,15 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[2c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[3a]"></a>limpia_pantalla</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[2c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-</UL>
-
 <P><STRONG><a name="[2c]"></a>main</STRONG> (Thumb, 178 bytes, Stack size 4 bytes, main.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 56<LI>Call Chain = main &rArr; imprime &rArr; desliza_texto &rArr; delay_ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[3a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;limpia_pantalla
-<LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;imprime
+<BR>[Calls]<UL><LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;imprime
+<LI><a href="#[3a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;limpia_pantalla
 <LI><a href="#[36]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;delay_ms
 </UL>
 <BR>[Called By]<UL><LI><a href="#[2b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
-
-<P><STRONG><a name="[64]"></a>splash_screen</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text), UNUSED)
-
-<P><STRONG><a name="[65]"></a>set_splash_screen</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, main.o(.text), UNUSED)
 <P>
 <H3>
 Local Symbols
